--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@ionic-native/splash-screen": "^4.3.3",
     "@ionic-native/status-bar": "4.3.3",
     "@ionic/storage": "2.1.3",
+    "angularfire2": "^5.0.0-rc.3",
     "cordova": "^7.1.0",
+    "firebase": "^4.6.2",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.2",
@@ -33,6 +35,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.0",
+    "@types/request": "0.0.30",
     "typescript": "2.4.2"
   },
   "description": "An Ionic project"
