--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@angular/platform-browser": "5.0.0",
     "@angular/platform-browser-dynamic": "5.0.0",
     "@ionic-native/core": "4.3.3",
+    "@ionic-native/native-geocoder": "^4.4.0",
     "@ionic-native/splash-screen": "^4.3.3",
     "@ionic-native/status-bar": "4.3.3",
     "@ionic/storage": "2.1.3",
     "angularfire2": "^5.0.0-rc.3",
     "cordova": "^7.1.0",
+    "cordova-plugin-nativegeocoder": "^2.0.4",
     "firebase": "^4.6.2",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
@@ -39,5 +41,10 @@
     "@types/request": "0.0.30",
     "typescript": "2.4.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-nativegeocoder": {}
+    }
+  }
 }
