--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "@angular/platform-browser": "5.0.0",
     "@angular/platform-browser-dynamic": "5.0.0",
     "@ionic-native/core": "4.3.3",
-    "@ionic-native/native-geocoder": "^4.4.0",
+    "@ionic-native/native-geocoder": "^4.4.2",
     "@ionic-native/splash-screen": "^4.3.3",
     "@ionic-native/status-bar": "4.3.3",
     "@ionic/storage": "2.1.3",
+    "@types/leaflet": "^1.2.2",
     "angularfire2": "^5.0.0-rc.3",
     "cordova": "^7.1.0",
     "cordova-plugin-nativegeocoder": "^2.0.4",
